--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -33,6 +33,7 @@
 @using SPTarkov.Launcher.Components.Settings
 @using SPTarkov.Launcher.Components.Forge
 @using SPTarkov.Launcher.Components.Info
+@using SPTarkov.Launcher.Components.Settings.Switches
 
 @using System.Collections.Specialized
 @using Size = MudBlazor.Size
