--- a/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDiscordDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDiscordDialog.razor
@@ -1,103 +1,151 @@
-﻿@* @inject ISnackbar Snackbar *@
-@* *@
-@* <MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default"> *@
-@*     <DialogContent> *@
-@*         <MudContainer Class="py-4"> *@
-@*             @if (_requestInProgress) *@
-@*             { *@
-@*                 <MudContainer Class="d-flex flex-column align-center gap-4"> *@
-@*                     <MudProgressCircular Color="Color.Primary" Indeterminate="true" Size="Size.Large"/> *@
-@*                     <MudText>@_taskText</MudText> *@
-@*                 </MudContainer> *@
-@*             } *@
-@*             else *@
-@*             { *@
-@*                 <MudForm Model="request" @bind-IsValid="@_success" Class="gap-2 mt-3"> *@
-@*                     <MudTextField Immediate="true" @bind-Value="request.Email" Label="Token" Variant="Variant.Outlined" Margin="Margin.Dense" Required="true"/> *@
-@*                 </MudForm> *@
-@*             } *@
-@* *@
-@*             <MudContainer Class="mt-3 d-flex justify-end pa-0 gap-2"> *@
-@*                 <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="RunLoginTask">Login</MudButton> *@
-@*                 <MudButton Variant="Variant.Filled" Color="Color.Default" @onclick="UserCancelled">Close</MudButton> *@
-@*             </MudContainer> *@
-@*         </MudContainer> *@
-@*     </DialogContent> *@
-@* </MudDialog> *@
-@* *@
-@* @code { *@
-@*     private bool _success; *@
-@*     private bool _requestInProgress; *@
-@*     private string _taskText = ""; *@
-@* *@
-@*     [CascadingParameter] *@
-@*     private IMudDialogInstance mudDialog { get; set; } *@
-@* *@
-@*     private ForgeLoginRequest request { get; } = new(); *@
-@*     private CancellationTokenSource token { get; set; } *@
-@*     private bool userCancel { get; set; } *@
-@* *@
-@*     private async Task RunLoginTask() *@
-@*     { *@
-@*         var result = false; *@
-@*         _requestInProgress = true; *@
-@*         try *@
-@*         { *@
-@*             result = await CallForge("Trying to login", "Failed to login"); *@
-@*         } *@
-@*         catch (TaskCanceledException e) when (token.IsCancellationRequested) *@
-@*         { *@
-@*             AbortOrFail("Request Timed out!"); *@
-@*             return; *@
-@*         } *@
-@*         catch (HttpRequestException e) *@
-@*         { *@
-@*             AbortOrFail(); *@
-@*             return; *@
-@*         } *@
-@*         catch (Exception e) *@
-@*         { *@
-@*             AbortOrFail(); *@
-@*             return; *@
-@*         } *@
-@* *@
-@*         if (result) *@
-@*         { *@
-@*             Submit(); *@
-@*             _requestInProgress = false; *@
-@*         } *@
-@*     } *@
-@* *@
-@*     private async Task<bool> CallForge(string taskText = "", string failString = "") *@
-@*     { *@
-@*         // Discord cant be authenticated via api, so do this to make sure its known *@
-@*         throw new NotImplementedException(); *@
-@*     } *@
-@* *@
-@*     private void Submit() *@
-@*     { *@
-@*         Snackbar.Add($"Logged in to {request.Email}!", Severity.Success); *@
-@*         mudDialog.Close(); *@
-@*     } *@
-@* *@
-@*     private void AbortOrFail(string message = "Error connecting to server!") *@
-@*     { *@
-@*         if (!userCancel) *@
-@*         { *@
-@*             Snackbar.Add(message, Severity.Error); *@
-@*         } *@
-@* *@
-@*         token?.Cancel(); *@
-@*         mudDialog.Cancel(); *@
-@*         _requestInProgress = false; *@
-@*     } *@
-@* *@
-@*     private void UserCancelled() *@
-@*     { *@
-@*         userCancel = true; *@
-@*         _requestInProgress = false; *@
-@*         token?.Cancel(); *@
-@*         mudDialog.Cancel(); *@
-@*     } *@
-@* *@
-@* } *@
+﻿@inject ISnackbar Snackbar
+@inject HttpHelper HttpHelper
+@inject ILogger<ForgeDiscordDialog> Logger
+
+<MudDialog Class="mud-background-gray border-2 border-solid mud-border-lines-default">
+    <DialogContent>
+        <MudContainer Class="py-4">
+            @if (_requestInProgress)
+            {
+                <MudContainer Class="d-flex flex-column align-center gap-4">
+                    <MudProgressCircular Color="Color.Primary" Indeterminate="true" Size="Size.Large"/>
+                    <MudText>@_taskText</MudText>
+                </MudContainer>
+            }
+            else
+            {
+                <MudForm Model="ApiKey" @bind-IsValid="@_success" Class="gap-2 mt-3">
+                    <MudTextField Immediate="true" @bind-Value="ApiKey" Label="Token" Variant="Variant.Outlined" Margin="Margin.Dense" Required="true"/>
+                </MudForm>
+            }
+
+            <MudContainer Class="mt-3 d-flex justify-end pa-0 gap-2">
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="ml-auto" @onclick="RunLoginTask">Login</MudButton>
+                <MudButton Variant="Variant.Filled" Color="Color.Default" @onclick="UserCancelled">Close</MudButton>
+            </MudContainer>
+        </MudContainer>
+    </DialogContent>
+</MudDialog>
+
+@code {
+    private bool _success;
+    private bool _requestInProgress;
+    private string _taskText = "";
+
+    [CascadingParameter]
+    private IMudDialogInstance MudDialog { get; set; }
+
+    private string ApiKey { get; set; } = "";
+    private CancellationTokenSource Token { get; set; }
+    private bool UserCancel { get; set; }
+
+    private async Task RunLoginTask()
+    {
+        bool result;
+        _requestInProgress = true;
+
+        try
+        {
+            result = await CallForge("Trying to login", "Failed to login");
+        }
+        catch (TaskCanceledException) when (Token.IsCancellationRequested)
+        {
+            AbortOrFail("Request Timed out!");
+            return;
+        }
+        catch (HttpRequestException)
+        {
+            AbortOrFail();
+            return;
+        }
+        catch (Exception)
+        {
+            AbortOrFail();
+            return;
+        }
+
+        if (result)
+        {
+            Submit();
+            _requestInProgress = false;
+        }
+    }
+
+    private async Task<bool> CallForge(string taskText = "", string failString = "")
+    {
+        try
+        {
+            Token = new CancellationTokenSource(TimeSpan.FromSeconds(10));
+            _taskText = taskText;
+            StateHasChanged();
+            await Task.Delay(20);
+
+            var result = await HttpHelper.ForgeApiAbility(ApiKey, Token.Token);
+
+            if (result is null)
+            {
+                Logger.LogError("Forge ForgeLogin result is null");
+                return false;
+            }
+
+            if (!result.Success)
+            {
+                // Key is not correct
+                Logger.LogInformation("Forge ForgeLogin failed to authenticate, please make sure this is correct: {a}", ApiKey);
+                AbortOrFail(failString);
+                return false;
+            }
+
+            if (result.Success)
+            {
+                if (result.Data?.Contains("read") ?? false)
+                {
+                    Logger.LogInformation("Forge ForgeLogin Authenticated");
+                    HttpHelper.SetApiKey(ApiKey);
+                    Token?.Dispose();
+                    return true;
+                }
+                else
+                {
+                    Logger.LogInformation("Forge ForgeLogin failed to authenticate, No Read permissions were given: {a}", ApiKey);
+                    AbortOrFail(failString);
+                    return false;
+                }
+            }
+        }
+        catch (Exception)
+        {
+            AbortOrFail();
+            return false;
+        }
+
+        return false;
+    }
+
+    private void Submit()
+    {
+        Snackbar.Add($"Logged in with api key!", Severity.Success);
+        MudDialog.Close();
+    }
+
+    private void AbortOrFail(string message = "Error connecting to server!")
+    {
+        if (!UserCancel)
+        {
+            Snackbar.Add(message, Severity.Error);
+        }
+
+        Token?.Cancel();
+        MudDialog.Cancel();
+        _requestInProgress = false;
+    }
+
+    private void UserCancelled()
+    {
+        UserCancel = true;
+        _requestInProgress = false;
+        Token?.Cancel();
+        MudDialog.Cancel();
+    }
+
+}
