--- a/project/SPTarkov.Launcher/Pages/Forge.razor
+++ b/project/SPTarkov.Launcher/Pages/Forge.razor
@@ -36,39 +36,38 @@
     }
     else if (!ApiKeyAvailable)
     {
-        <MudItem sm="12">
-            <MudAlert Severity="Severity.Info" Variant="Variant.Outlined" Dense="true">No API Key found, please follow the instructions below to be able to use Forge!</MudAlert>
-        </MudItem>
-        <MudItem sm="12" Class="my-2 pa-2">
-            <MudText Class="mb-1">To use Forge via the launcher you must:</MudText>
-            <MudText>1. Have an account on the Forge.</MudText>
-            <MudText>2. Login and generate an Api Key for you to use.</MudText>
-            <MudText Class="mt-1">Below are two paths on how to generate that key.</MudText>
-        </MudItem>
-        <MudExpansionPanels MultiExpansion="true">
-            <MudExpansionPanel Text="Email and password login">
-                <MudText>If you have a Email and password login we are able to get a key automatically,</MudText>
-                <MudText>This requires you to login via the button below.</MudText>
-                <MudAlert Dense="true" Severity="Severity.Info" Variant="Variant.Outlined" Class="my-2">None of your login details will be saved!</MudAlert>
-                <MudItem sm="12" Class="mt-4 d-flex justify-start">
-                    <MudButton Size="Size.Small" Variant="Variant.Filled" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Login" @onclick="StartForgeLoginTask">Login</MudButton>
-                </MudItem>
-            </MudExpansionPanel>
-            <MudExpansionPanel Text="Discord login">
-                <MudText>If you have a Discord login we are NOT able to get a key automatically,</MudText>
-                <MudText>This requires you to login via the Forge.</MudText>
-                <MudText Class="mt-2">1. Start by logging into
-                    <MudLink Href="https://forge.sp-tarkov.com">The Forge</MudLink>
-                    .
-                </MudText>
-                <MudText>2. Click your icon top right and select API Tokens.</MudText>
-                <MudText>3. Under "Token Name" put "SPT Launcher Key" and click create.</MudText>
-                <MudText>4. Click the button below to save this Token and test it. if it worked you'll be moved to the Forge Section.</MudText>
-                <MudItem sm="12" Class="mt-4 d-flex justify-start">
-                    <MudButton Size="Size.Small" Variant="Variant.Filled" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Login" @onclick="StartForgeDiscordTask" Disabled="true">Login</MudButton>
-                </MudItem>
-            </MudExpansionPanel>
-        </MudExpansionPanels>
+        <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 border-2 border-solid mud-border-lines-default card-container mud-height-full">
+            <MudItem sm="12">
+                <MudAlert Severity="Severity.Info" Variant="Variant.Outlined" Dense="true">No API Key found, please follow the instructions below to be able to use Forge!</MudAlert>
+            </MudItem>
+            <MudItem sm="12" Class="my-2 pa-2">
+                <MudText Class="mb-1">To use Forge via the launcher you must:</MudText>
+                <MudText>1. Have an account on the Forge.</MudText>
+                <MudText>2. Login and generate an Api Key for you to use.</MudText>
+                <MudText Class="mt-1">Below are two paths on how to generate that key.</MudText>
+            </MudItem>
+            <MudExpansionPanels MultiExpansion="true">
+                <MudExpansionPanel Text="Email and password login">
+                    <MudText>If you have a Email and password login we are able to get a key automatically,</MudText>
+                    <MudText>This requires you to login via the button below.</MudText>
+                    <MudAlert Dense="true" Severity="Severity.Info" Variant="Variant.Outlined" Class="my-2">None of your login details will be saved!</MudAlert>
+                    <MudItem sm="12" Class="mt-4 d-flex justify-start">
+                        <MudButton Size="Size.Small" Variant="Variant.Filled" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Login" @onclick="StartForgeLoginTask">Login</MudButton>
+                    </MudItem>
+                </MudExpansionPanel>
+                <MudExpansionPanel Text="Discord login">
+                    <MudText>If you have a Discord login we are NOT able to get a key automatically,</MudText>
+                    <MudText>This requires you to login via the Forge.</MudText>
+                    <MudText Class="mt-2">1. Start by logging into <MudLink Href="https://forge.sp-tarkov.com">The Forge.</MudLink></MudText>
+                    <MudText>2. Click your icon top right and select API Tokens.</MudText>
+                    <MudText>3. Under "Token Name" put "SPT Launcher Key" and click create.</MudText>
+                    <MudText>4. Click the button below to save this Token and test it.</MudText>
+                    <MudItem sm="12" Class="mt-4 d-flex justify-start">
+                        <MudButton Size="Size.Small" Variant="Variant.Filled" Color="Color.Dark" StartIcon="@Icons.Material.Filled.Login" @onclick="StartForgeDiscordTask">Login</MudButton>
+                    </MudItem>
+                </MudExpansionPanel>
+            </MudExpansionPanels>
+        </MudPaper>
     }
     else if (SearchResponse is null || SearchInProgress)
     {
@@ -217,7 +216,7 @@
             ApiKeyAvailable = false;
         }
 
-        PaginationSelected = page ?? 1;
+        PaginationSelected = (int) page;
         StateHelper.CurrentPagination = PaginationSelected;
         SearchInProgress = false;
         StateHasChanged();
