--- a/project/SPTarkov.Launcher/Shared/NavMenu.razor
+++ b/project/SPTarkov.Launcher/Shared/NavMenu.razor
@@ -2,6 +2,7 @@
 
 @inject LocaleHelper LocaleHelper
 @inject StateHelper StateHelper
+@inject DownloadHelper DownloadHelper
 
 <MudNavMenu Class="mud-typography-nowrap">
     <MudTooltip Color="Color.Dark" Arrow="false" Placement="Placement.Right" ShowOnHover="true" Text="@(LocaleHelper.Get("home"))" Inline="false">
@@ -10,6 +11,12 @@
 </MudNavMenu>
 <MudSpacer/>
 <MudNavMenu Class="mud-typography-nowrap">
+    @if (DownloadHelper.GetDownloadTasks().Any())
+    {
+        <MudTooltip Color="Color.Dark" Arrow="false" Text="Downloads" Placement="Placement.Right" Inline="false">
+            <MudNavLink Disabled="!StateHelper.AllowNavigation" IconColor="Color.Default" Icon="@Icons.Material.Filled.Downloading" OnClick="ToggleComponent"/>
+        </MudTooltip>
+    }
     <MudTooltip Color="Color.Dark" Arrow="false" Text="@(LocaleHelper.Get("mod_loader"))" Placement="Placement.Right" Inline="false">
         <MudNavLink Disabled="!StateHelper.AllowNavigation" IconColor="Color.Default" Icon="@Icons.Material.Filled.Reorder" Match="NavLinkMatch.All" Href="/ModLoader"/>
     </MudTooltip>
@@ -26,6 +33,8 @@
 
 @code
 {
+    private bool _showDownloadComponent;
+
     protected override void OnInitialized()
     {
         StateHelper.OnStateChanged += StateHasChanged;
@@ -35,5 +44,11 @@
     public void Dispose()
     {
         StateHelper.OnStateChanged -= StateHasChanged;
+    }
+
+    private void ToggleComponent()
+    {
+        _showDownloadComponent = !_showDownloadComponent;
+        StateHelper.SetShowDownloads(_showDownloadComponent);
     }
 }
