remove download section from modloader

--- a/project/SPTarkov.Launcher/Pages/ModLoader.razor
+++ b/project/SPTarkov.Launcher/Pages/ModLoader.razor
@@ -4,11 +4,11 @@
 
 @inject DownloadHelper DownloadHelper
 
-<MudContainer Class="px-4 my-2" MaxWidth="MaxWidth.Large" Style="height: 96vh;">
+<MudContainer Class="px-4 my-2 page-animation-switch" MaxWidth="MaxWidth.Large" Style="height: 96vh;">
     <MudGrid Spacing="4" Justify="Justify.SpaceEvenly" Class=" mud-height-full">
-        <MudItem sm="4" Class="downloads mud-height-full">
+        <MudItem sm="6" Class="uninstalled mud-height-full">
             <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 border-2 border-solid mud-border-lines-default card-container mud-height-full">
-                <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Default" Class="">Downloads</MudText>
+                <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Default">Uninstalled Mods</MudText>
                 @foreach (var (name, item) in DownloadHelper.GetDownloadTasks())
                 {
                     <MudLink Class="setting-on-hover pa-1" Underline="Underline.None" Color="Color.Default">
@@ -17,7 +17,7 @@
                                 <MudText Class="pb-2">@name</MudText>
                                 <MudProgressLinear Rounded="true" Color="Color.Info" Size="Size.Small" Value="@item.Progress" Min="0" Max="100">
                                     <ChildContent>
-                                        <MudText  Color="Color.Default">@item.Progress%</MudText>
+                                        <MudText Color="Color.Default">@item.Progress%</MudText>
                                     </ChildContent>
                                 </MudProgressLinear>
                             </MudItem>
@@ -25,13 +25,13 @@
                                 @if (item.Complete)
                                 {
                                     <MudTooltip Arrow="false" ShowOnHover="true" ShowOnFocus="false" ShowOnClick="false" Text="Close" Placement="Placement.Left">
-                                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Remove" Color="Color.Info" OnClick="() => DownloadHelper.CloseDownloadTask(name)" />
+                                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Remove" Color="Color.Info" OnClick="() => DownloadHelper.CloseDownloadTask(name)"/>
                                     </MudTooltip>
                                 }
                                 else
                                 {
                                     <MudTooltip Arrow="false" ShowOnHover="true" ShowOnFocus="false" ShowOnClick="false" Text="Cancel" Placement="Placement.Left">
-                                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Cancel" Color="Color.Error" OnClick="() => DownloadHelper.CancelDownloadTask(name)" />
+                                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Filled.Cancel" Color="Color.Error" OnClick="() => DownloadHelper.CancelDownloadTask(name)"/>
                                     </MudTooltip>
                                 }
                             </MudItem>
@@ -40,13 +40,7 @@
                 }
             </MudPaper>
         </MudItem>
-        <MudItem sm="4" Class="uninstalled mud-height-full">
-            <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 border-2 border-solid mud-border-lines-default card-container mud-height-full">
-                <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Default">Uninstalled Mods</MudText>
-
-            </MudPaper>
-        </MudItem>
-        <MudItem sm="4" Class="installed mud-height-full">
+        <MudItem sm="6" Class="installed mud-height-full">
             <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 border-2 border-solid mud-border-lines-default card-container mud-height-full">
                 <MudText Typo="Typo.h6" Align="Align.Center" Color="Color.Default">Installed Mods</MudText>
 
@@ -68,5 +62,4 @@
     {
         _progressTimer?.Dispose();
     }
-
 }
