--- a/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDownloadDialog.razor
+++ b/project/SPTarkov.Launcher/Dialogs/Forge/ForgeDownloadDialog.razor
@@ -7,7 +7,7 @@
     <DialogContent>
         <MudContainer Class="d-flex flex-column gap-1 mt-4">
             <MudPaper Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4 pa-2">
-                <MudText>Please make sure to read the mod page and this version changes!</MudText>
+                <MudText>Please make sure to read the mod page and this versions changes!</MudText>
             </MudPaper>
             <MudPaper Class="mud-background-gray border-2 border-solid mud-border-lines-default mb-4 pa-2">
                 <MudText Class="user-markdown">
