--- a/project/SPTarkov.Launcher/_Imports.razor
+++ b/project/SPTarkov.Launcher/_Imports.razor
@@ -5,10 +5,12 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.Extensions.Logging
 @using Microsoft.JSInterop
 @using System.Diagnostics
 @using System.Reflection
 @using System.IO
+@using System.Collections.Specialized
 
 @using MudBlazor
 @using MudBlazor.Components.Snackbar.InternalComponents
@@ -34,7 +36,6 @@
 @using SPTarkov.Launcher.Components.Forge
 @using SPTarkov.Launcher.Components.Info
 @using SPTarkov.Launcher.Components.Settings.Switches
+@using SPTarkov.Launcher.Components.Downloads
 
-@using System.Collections.Specialized
 @using Size = MudBlazor.Size
-@using Microsoft.Extensions.Logging
